--- a/index.html
+++ b/index.html
@@ -180,7 +180,31 @@
   </div>
 </template>
 
+<script>
+  let fireballSize = 22;
+
+    let getFireballSpeed = function (isMovingLeft) {
+      return isMovingLeft ? 2 : 5;
+    }
+
+    let wizardWidth = 70;
+
+    let getWizardHeight = function () {
+      return 1.337 * wizardWidth;
+    }
+
+    let wizardSpeed = 3;
+
+    let getWizardX = function (gameFieldWidth) {
+      return (gameFieldWidth - wizardWidth) / 2;
+    }
+
+    let getWizardY = function (gameFieldHeight) {
+      return gameFieldHeight / 3;
+    }
+</script>
 <script src="js/game.js"></script>
+
 
 </body>
 </html>
